--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -21,6 +20,7 @@
     </queries>
 
     <application
+        android:name=".Activity.YourApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -32,12 +32,18 @@
         android:theme="@style/Theme.FinalCalciHide"
         tools:targetApi="31">
         <activity
+            android:name=".Activity.NoteActivity"
+            android:exported="false" />
+        <activity
+            android:name=".MainActivity"
+            android:exported="false" />
+        <activity
             android:name=".Activity.SelectVideos"
             android:exported="false" />
         <activity
             android:name=".Activity.SelectImagesorVideos"
             android:exported="false"
-            android:theme="@style/Theme.status_bar_clr"/>
+            android:theme="@style/Theme.status_bar_clr" />
         <activity
             android:name=".Activity.ImageVideoBucket"
             android:exported="false"
@@ -45,13 +51,13 @@
         <activity
             android:name=".ViewPager.ImageandVideoViewPager"
             android:exported="false"
-            android:theme="@style/Theme.FullScreen"/>
+            android:theme="@style/Theme.FullScreen" />
         <activity
             android:name=".Activity.ImagesHidden"
             android:exported="false"
-            android:theme="@style/Theme.status_bar_clr"/>
+            android:theme="@style/Theme.status_bar_clr" />
         <activity
-            android:name=".MainActivity"
+            android:name=".Activity.Calculator"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -59,6 +65,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+<receiver android:name=".Activity.ForegroundReceiver"/>
     </application>
 
 </manifest>
