--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,8 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA" />
+
     <uses-permission
         android:name="android.permission.MANAGE_EXTERNAL_STORAGE"
         tools:ignore="ScopedStorage" />
@@ -31,6 +33,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FinalCalciHide"
         tools:targetApi="31">
+        <activity
+            android:name=".Activity.Intruder"
+            android:exported="false" />
         <activity
             android:name=".Activity.NoteActivity"
             android:exported="false" />
@@ -66,7 +71,7 @@
             </intent-filter>
         </activity>
 
-<receiver android:name=".Activity.ForegroundReceiver"/>
+        <receiver android:name=".Activity.ForegroundReceiver" />
     </application>
 
 </manifest>
