--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,12 @@
         android:theme="@style/Theme.FinalCalciHide"
         tools:targetApi="31">
         <activity
+            android:name=".Activity.FileShow"
+            android:exported="false" />
+        <activity
+            android:name=".Activity.RecycleBin"
+            android:exported="false" />
+        <activity
             android:name=".Activity.VideoHidden"
             android:exported="false" />
         <activity
@@ -56,6 +62,10 @@
             android:exported="false"
             android:theme="@style/Theme.status_bar_clr" />
         <activity
+            android:name=".Activity.SinglePV"
+            android:exported="false"
+            android:theme="@style/Theme.status_bar_clr" />
+        <activity
             android:name=".ViewPager.ImageandVideoViewPager"
             android:exported="false"
             android:theme="@style/Theme.FullScreen" />
@@ -72,6 +82,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="${applicationId}.provider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
 
         <receiver android:name=".Activity.ForegroundReceiver" />
     </application>
